--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@obyte/ocore": "^0.2.93",
+    "@types/wif": "^2.0.2",
+    "ant-design-vue": "^2.2.8",
+    "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
+    "obyte": "^0.1.17",
+    "secp256k1": "^3.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "wif": "^2.0.6"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
+    "@types/lodash": "^4.14.172",
     "@types/mocha": "^5.2.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -37,6 +46,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.2.1",
+    "sass-loader": "^12.1.0",
     "typescript": "~4.1.5"
   }
 }
