--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ant-design-vue": "^2.2.8",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "lightweight-charts": "^3.6.1",
     "lodash": "^4.17.21",
     "obyte": "^0.1.17",
     "secp256k1": "^3.7.1",
