--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.0.1",
     "@obyte/ocore": "^0.2.93",
     "@types/wif": "^2.0.2",
     "ant-design-vue": "^2.2.8",
