--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.6.5",
     "lightweight-charts": "^3.6.1",
     "lodash": "^4.17.21",
+    "luxon": "^2.2.0",
     "obyte": "^0.1.17",
     "secp256k1": "^3.7.1",
     "vue": "^3.0.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/lodash": "^4.14.172",
+    "@types/luxon": "^2.0.8",
     "@types/mocha": "^5.2.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
