--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "oswap-stats",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -11,8 +10,6 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
-    "@obyte/ocore": "^0.2.93",
-    "@types/wif": "^2.0.2",
     "ant-design-vue": "^2.2.8",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
@@ -20,11 +17,11 @@
     "lodash": "^4.17.21",
     "luxon": "^2.2.0",
     "obyte": "^0.1.17",
+    "oswap-v2-sdk": "^0.1.3",
     "secp256k1": "^3.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0",
-    "wif": "^2.0.6"
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
