Ob-123-add-tabs-to-filter-by-tx-type (#3)
* - added mining apy to pools

* - added % symbol to mining apy

* - added filter by tx type on pool page

* - added mining apy on pool page

* - aligned mining apy to bottom on pool page

* - alignment of the block height with chart

* - changed apy block in table

* - fixed mobile view of home page
- added filters in separate block on pool page

* - layout changes
- fixed mining pool

* - fixed apy sorter

* - changed filtering on fetching with condition

* - fixed current page on filter change

* - apy center

* - margin top in table on pool page

* - pool -> link

Co-authored-by: Evgenii Stulnikov <xxjenekxx@gmail.com>

--- a/.env.livenet
+++ b/.env.livenet
@@ -1,2 +1,3 @@
 VUE_APP_API_HOST='https://v2-data.oswap.io'
 VUE_APP_ICON_CDN_URL='https://cdn.jsdelivr.net/npm/obyte-icons@latest/build'
+VUE_APP_LIQUIDITY_PROVIDER_API='https://liquidity.obyte.org'
