--- a/.env.livenet
+++ b/.env.livenet
@@ -1,3 +1,4 @@
 VUE_APP_API_HOST='https://v2-data.oswap.io'
 VUE_APP_ICON_CDN_URL='https://cdn.jsdelivr.net/npm/obyte-icons@latest/build'
 VUE_APP_LIQUIDITY_PROVIDER_API='https://liquidity.obyte.org'
+VUE_APP_OSWAP_TOKEN_API='https://token.oswap.io/api'
